Switching between active cameras doesnt update camera shift in Viewport #62317

Closed
opened 2019-03-07 15:52:16 +01:00 by Jonathan · 7 comments

System Information
Operating system: Windows 64-bit pro
Graphics card: 2080 ti Founders Edition

Blender Version
version: 2.80 (sub 46), branch: blender2.7, commit date: 2019-03-05 00:32, hash: 1df6a98b17, type: Release
build date: 04/03/2019, 18:04

Short description of error

Switching the active camera in rendered mode (cycles), doesnt update the camera shift (y) in the viewport till you click anywhere.

Exact steps for others to reproduce the error
see above

**System Information** Operating system: Windows 64-bit pro Graphics card: 2080 ti Founders Edition **Blender Version** version: 2.80 (sub 46), branch: blender2.7, commit date: 2019-03-05 00:32, hash: 1df6a98b176f, type: Release build date: 04/03/2019, 18:04 **Short description of error** Switching the active camera in rendered mode (cycles), doesnt update the camera shift (y) in the viewport till you click anywhere. **Exact steps for others to reproduce the error** see above
Author

Added subscriber: @Tschonatschan

Added subscriber: @Tschonatschan

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I'm unsure what you mean with "camera shift". If I set up two different cameras in the default scene and switch between them, it seems to work as expected.

I'm unsure what you mean with "camera shift". If I set up two different cameras in the default scene and switch between them, it seems to work as expected.

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

I can confirm that.
In the scene below there are 2 cameras. The selected one (not the one you are looking through) has the
camera.data.shift_y value set to -1. If you hit CTRL+0 and make it the active viewport camera you see the grid changing. But the cycles rendered viewport only updates when you click anywhere.
camera_shift_cycles_update.blend

I can confirm that. In the scene below there are 2 cameras. The selected one (not the one you are looking through) has the `camera.data.shift_y` value set to -1. If you hit CTRL+0 and make it the active viewport camera you see the grid changing. But the cycles rendered viewport only updates when you click anywhere. [camera_shift_cycles_update.blend](https://archive.blender.org/developer/F6780002/camera_shift_cycles_update.blend)

This issue was referenced by 49b9b159e4

This issue was referenced by 49b9b159e4a4baaf48b121edf66d3436873dfc48

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62317
No description provided.