Fix T62317: missing Cycles viewport update when changing active camera.